# claude-code

./: CLAUDE.md  TASK_LOG.md  feed.xml
.claude/skills/repo-teacher/: SKILL.md
.claude/skills/task-outcome-log/: SKILL.md
examples/mcp/process-tracker/: .gitignore  README.md  pyproject.toml
examples/mcp/process-tracker/process_tracker/: __init__.py  server.py
examples/mcp/process-tracker/tests/: test_server.py
plugins/feature-dev/: README.md
plugins/feature-dev/commands/: feature-dev.md
